# cloud-haskell

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPOS  build.mk  cloud-haskell.cabal  stack.yaml
